@@ -1,3 +1,8 @@
+2006-03-31  David Reveman  <davidr@novell.com>
+
+	* render/render.c (ProcRenderQueryPictFormats): Do not return YUV
+	formats.
+
 2006-03-30  David Reveman  <davidr@novell.com>
 
 	* hw/xgl/glx/xglx.c: Move XOpenDisplay and GLX initialization
